Added function which extracts a pure basename without extension.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(loadFromGit)
 export(multiKnit)
 export(multiMerge)
 export(par7zip)
+export(pureBasename)
 export(rmDuplCols)
 export(setwdOS)
 export(trimImages)
