--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,9 @@ Maintainer: Florian Detsch <florian.detsch@staff.uni-marburg.de>
 Description: The 'Orcs' package yields a collection of various R functions meant to simplify everyday-life coding without being devoted to a particular scope of application. Check out the 'vignettes' subfolder for recent updates and sample snippets.
 License: GNU GPL (>=3)
 Depends:
-    raster
+    raster, 
+    Rcpp
 Suggests: 
     knitr
+LinkingTo: 
+    Rcpp
