Rcpp-related modifications.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,9 +16,9 @@ export(setwdOS)
 export(trimImages)
 export(unlistStrsplit)
 export(unsortedFactor)
-import(Rcpp)
 import(devtools)
 import(knitr)
 import(methods)
 import(raster)
+importFrom(Rcpp,sourceCpp)
 useDynLib(Orcs)
