--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,10 +17,11 @@ Description:
 License: GPL (>= 3) | file LICENSE
 Depends:
     methods,
-    raster,
-    Rcpp
+    raster
 Imports:
     devtools, 
-    knitr
+    knitr, 
+    Rcpp (>= 0.11.3)
 LinkingTo: Rcpp
 RoxygenNote: 5.0.1
+SystemRequirements: GNU make
