--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ncolC)
 export(nrowC)
 export(par7zip)
 export(pureBasename)
+export(pvalue)
 export(rmDuplCols)
 export(setwdOS)
 export(trimImages)
