Initial upload: assignSSH() (including minor DESCRIPTION and NAMESPACE edits).

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Depends:
 Imports:
     devtools, 
     knitr, 
-    Rcpp (>= 0.11.3)
+    Rcpp (>= 0.11.3), 
+    stats
 LinkingTo: Rcpp
 RoxygenNote: 5.0.1
 SystemRequirements: GNU make
