--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: Orcs
 Type: Package
 Title: Omnidirectional R Code Snippets
-Version: 1.0.3
-Date: 2015-12-09
+Version: 1.0.4
+Date: 2017-07-14
 Author: Florian Detsch
-Maintainer: Florian Detsch <florian.detsch@staff.uni-marburg.de>
+Maintainer: Florian Detsch <fdetsch@web.de>
 Description: 
     I tend to repeat the same code chunks over and over again. At first, this 
     was fine for me and I paid little attention to such redundancies. A little 
