Major update: introduced src/Orcs.init.c (created by tools::package_native_routine_registration_skeleton())and adjusted useDynLib call accordingly.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,4 +31,5 @@ import(raster)
 importFrom(Rcpp,sourceCpp)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
-useDynLib(Orcs)
+useDynLib(Orcs, .registration = TRUE)
+
