--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,12 +20,11 @@ Depends:
 Imports:
     devtools,
     knitr,
-    lattice, 
+    lattice,
     latticeExtra,
     Rcpp (>= 0.11.3),
     stats
-VignetteBuilder:
-    knitr
+VignetteBuilder: knitr
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 SystemRequirements: GNU make
