Initial upload: ifMissing() to flexibly handle function calls in response to (non-)existing target files.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(assignSSH)
 export(bumpVersion)
 export(dimC)
+export(ifMissing)
 export(latticeCombineGrid)
 export(latticeCombineLayer)
 export(lineEnding)
