--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(assignSSH)
 export(bumpVersion)
 export(dimC)
+export(evalMetrics)
 export(ifMissing)
 export(latticeCombineGrid)
 export(latticeCombineLayer)
