Initial upload: convert 'Extent' to 'SpatialPolygons' object.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(assignSSH)
 export(bumpVersion)
 export(dimC)
 export(evalMetrics)
+export(ext2spy)
 export(ifMissing)
 export(latticeCombineGrid)
 export(latticeCombineLayer)
