--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ import(lattice)
 import(latticeExtra)
 import(methods)
 import(raster)
+import(rgdal)
 importFrom(Rcpp,sourceCpp)
 importFrom(bookdown,render_book)
 importFrom(sp,proj4string)
