Moved functions over from Rsenal.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,11 @@
 export(assignSSH)
 export(buildBook)
 export(bumpVersion)
+export(calcOffsetGridText)
 export(dimC)
 export(evalMetrics)
 export(ext2spy)
+export(grid.stext)
 export(ifMissing)
 export(latticeCombineGrid)
 export(latticeCombineLayer)
@@ -18,15 +20,18 @@ export(multiKnit)
 export(multiMerge)
 export(ncolC)
 export(nrowC)
+export(offsetGridText)
 export(par7zip)
 export(pureBasename)
 export(pvalue)
 export(rmDuplCols)
 export(setwdOS)
+export(stextGrob)
 export(trimImages)
 export(unlistStrsplit)
 export(unsortedFactor)
 import(devtools)
+import(grid)
 import(knitr)
 import(lattice)
 import(latticeExtra)
@@ -35,6 +40,7 @@ import(raster)
 import(rgdal)
 importFrom(Rcpp,sourceCpp)
 importFrom(bookdown,render_book)
+importFrom(plotrix,thigmophobe)
 importFrom(sp,proj4string)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
