--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,9 +23,11 @@ Depends:
 Imports:
     bookdown, 
     devtools,
+    grid,
     knitr,
     lattice,
     latticeExtra,
+    plotrix,
     Rcpp (>= 0.11.3),
     sp,
     stats
