--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,8 +31,9 @@ Imports:
     Rcpp (>= 0.11.3),
     sp,
     stats
-VignetteBuilder: knitr
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 SystemRequirements: GNU make
-Suggests: testthat
+Suggests: testthat,
+    rmarkdown
+VignetteBuilder: knitr
