--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ import(rgdal)
 importFrom(Rcpp,sourceCpp)
 importFrom(bookdown,render_book)
 importFrom(plotrix,thigmophobe)
+importFrom(sf,st_as_sf)
 importFrom(sp,proj4string)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
