--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,23 +20,24 @@ LazyData: TRUE
 BugReports: https://github.com/fdetsch/Orcs/issues
 Depends:
     methods,
-    raster,
-    rgdal
+    raster
 Imports:
     bookdown, 
     devtools,
+    grDevices,
     grid,
     knitr,
     lattice,
     latticeExtra,
     plotrix,
     Rcpp (>= 0.11.3),
+    rgdal,
     sf,
     sp,
     stats
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
-SystemRequirements: GNU make
+SystemRequirements: GNU make, 7zip, unix2dos
 Suggests: testthat,
     rmarkdown
 VignetteBuilder: knitr
