--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(assignSSH)
 export(buildBook)
 export(bumpVersion)
-export(calcOffsetGridText)
 export(dimC)
 export(evalMetrics)
 export(ext2spy)
@@ -23,6 +22,7 @@ export(offsetGridText)
 export(par7zip)
 export(pureBasename)
 export(pvalue)
+export(rgb2spLayout)
 export(rmDuplCols)
 export(setwdOS)
 export(stextGrob)
@@ -39,6 +39,7 @@ import(raster)
 import(rgdal)
 importFrom(Rcpp,sourceCpp)
 importFrom(bookdown,render_book)
+importFrom(grDevices,rgb)
 importFrom(plotrix,thigmophobe)
 importFrom(sf,st_as_sf)
 importFrom(sp,proj4string)
