Update: merge() method is now registered in NAMESPACE file.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(stextGrob)
 export(trimImages)
 export(unlistStrsplit)
 export(unsortedFactor)
+exportMethods(merge)
 import(devtools)
 import(grid)
 import(knitr)
