Initial upload: moved compareDistributions() from Rsenal.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(assignSSH)
 export(buildBook)
 export(bumpVersion)
+export(compareDistributions)
 export(dimC)
 export(evalMetrics)
 export(ext2spy)
@@ -46,5 +47,8 @@ importFrom(sf,st_as_sf)
 importFrom(sp,proj4string)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
+importFrom(stats,median)
+importFrom(stats,na.exclude)
+importFrom(stats,sd)
 useDynLib(Orcs, .registration = TRUE)
 
