--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,8 +39,9 @@ Imports:
     sp,
     stats
 LinkingTo: Rcpp
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.1
 SystemRequirements: GNU make, 7zip, unix2dos
 Suggests: testthat,
     rmarkdown
 VignetteBuilder: knitr
+Encoding: UTF-8
