--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,6 @@ export(trimImages)
 export(unlistStrsplit)
 export(unsortedFactor)
 exportMethods(merge)
-import(devtools)
 import(grid)
 import(knitr)
 import(lattice)
@@ -43,6 +42,7 @@ importFrom(Rcpp,sourceCpp)
 importFrom(bookdown,render_book)
 importFrom(grDevices,rgb)
 importFrom(plotrix,thigmophobe)
+importFrom(remotes,install_github)
 importFrom(sf,st_as_sf)
 importFrom(sp,proj4string)
 importFrom(stats,coef)
