Moved functions coords2Lines(), coords2Polygons() from **mapview**.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(assignSSH)
 export(buildBook)
 export(bumpVersion)
 export(compareDistributions)
+export(coords2Lines)
+export(coords2Polygons)
 export(dimC)
 export(evalMetrics)
 export(ext2spy)
