Initial commit: substrC(); bumped version.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(rgb2spLayout)
 export(rmDuplCols)
 export(setwdOS)
 export(stextGrob)
+export(substrC)
 export(trimImages)
 export(unlistStrsplit)
 export(unsortedFactor)
