--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ import(lattice)
 import(latticeExtra)
 import(methods)
 import(raster)
+import(stats)
 importFrom(Rcpp,sourceCpp)
 importFrom(bookdown,render_book)
 importFrom(grDevices,rgb)
@@ -47,11 +48,6 @@ importFrom(plotrix,thigmophobe)
 importFrom(remotes,install_github)
 importFrom(sf,st_as_sf)
 importFrom(sp,proj4string)
-importFrom(stats,coef)
-importFrom(stats,complete.cases)
-importFrom(stats,median)
-importFrom(stats,na.exclude)
-importFrom(stats,sd)
 importFrom(terra,as.polygons)
 importFrom(terra,crs)
 importFrom(terra,ext)
