--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ BugReports: https://github.com/fdetsch/Orcs/issues
 LazyData: TRUE
 Depends: 
     methods,
-    raster
+    R (>= 2.10)
 Imports: 
     bookdown, 
     grDevices,
@@ -36,12 +36,14 @@ Imports:
     sp,
     stats,
     terra
+Suggests:
+    checkmate,
+    raster,
+    rmarkdown, 
+    tinytest
 LinkingTo: Rcpp
 RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
 SystemRequirements: GNU make, 7zip, unix2dos
-Suggests:
-    rmarkdown, 
-    tinytest
 VignetteBuilder: knitr
 Encoding: UTF-8
